Use Core Hud Event and improve type safety