@@ -2,7 +2,6 @@ package com.cavetale.windicator;
 
 import com.cavetale.core.exploits.PlayerPlacedBlocks;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
@@ -43,9 +42,6 @@ public final class Windicator {
     private int endBossCooldown;
     Wither boss = null;
     static final String STATE_PATH = "state.json";
-    static final String WATER = "water";
-    static final String MANSION = "mansion";
-    static final String END = "end";
     static final int BOSS_COOLDOWN = 20 * 30;
 
     protected void load() {
@@ -69,8 +65,8 @@ public final class Windicator {
         state.enabled = enabled;
     }
 
-    boolean isCore(Block block, String name) {
-        List<Vec3> list = state.cores.get(name);
+    boolean isCore(Block block, CoreType coreType) {
+        List<Vec3> list = getCores(coreType);
         if (list == null) return false;
         for (Vec3 vec : list) {
             if (vec.isSimilar(block)) return true;
@@ -78,22 +74,18 @@ public final class Windicator {
         return false;
     }
 
-    public static List<String> listCores() {
-        return Arrays.asList(WATER, MANSION, END);
-    }
-
-    String coreAt(Block block) {
-        for (String name : state.cores.keySet()) {
-            if (isCore(block, name)) return name;
+    CoreType coreAt(Block block) {
+        for (CoreType coreType : CoreType.values()) {
+            if (isCore(block, coreType)) return coreType;
         }
         return null;
     }
 
-    boolean addCore(Block block, String name) {
-        List<Vec3> list = state.cores.get(name);
+    boolean addCore(Block block, CoreType coreType) {
+        List<Vec3> list = getCores(coreType);
         if (list == null) {
             list = new ArrayList<>();
-            state.cores.put(name, list);
+            state.cores.put(coreType.name().toLowerCase(), list);
         }
         Vec3 vec = Vec3.of(block);
         if (list.contains(vec)) return false;
@@ -101,35 +93,35 @@ public final class Windicator {
         return true;
     }
 
-    boolean removeCore(Block block, String name) {
-        List<Vec3> list = state.cores.get(name);
+    boolean removeCore(Block block, CoreType coreType) {
+        List<Vec3> list = getCores(coreType);
         if (list == null) return false;
         boolean res = list.remove(Vec3.of(block));
         if (list.isEmpty()) {
-            state.cores.remove(name);
+            state.cores.remove(coreType.name().toLowerCase());
         }
         return res;
     }
 
-    List<Vec3> getCores(String name) {
-        List<Vec3> list = state.cores.get(name);
+    List<Vec3> getCores(CoreType coreType) {
+        List<Vec3> list = state.cores.get(coreType.name().toLowerCase());
         return list == null
-            ? Collections.emptyList()
+            ? List.of()
             : list;
     }
 
-    List<Block> getCoreBlocks(String name) {
-        List<Vec3> list = state.cores.get(name);
-        if (list == null) return Collections.emptyList();
+    List<Block> getCoreBlocks(CoreType coreType) {
+        List<Vec3> list = getCores(coreType);
+        if (list == null) return List.of();
         World world = getWorld();
-        if (world == null) return Collections.emptyList();
+        if (world == null) return List.of();
         return list.stream()
             .map(v -> world.getBlockAt(v.getX(), v.getY(), v.getZ()))
             .collect(Collectors.toList());
     }
 
-    int countCoreBlocks(String name) {
-        List<Vec3> list = state.cores.get(name);
+    int countCoreBlocks(CoreType coreType) {
+        List<Vec3> list = getCores(coreType);
         if (list == null) return 0;
         return list.size();
     }
@@ -158,8 +150,8 @@ public final class Windicator {
         return Bukkit.getWorld(MIRROR_WORLD);
     }
 
-    Set<EntityType> getCoreEntities(String name) {
-        switch (name) {
+    Set<EntityType> getCoreEntities(CoreType coreType) {
+        switch (coreType) {
         case WATER:
             return EnumSet.of(EntityType.GUARDIAN,
                               EntityType.DROWNED);
@@ -183,16 +175,16 @@ public final class Windicator {
         }
     }
 
-    String coreOf(EntityType entityType) {
-        if (getCoreEntities(WATER).contains(entityType)) return WATER;
-        if (getCoreEntities(MANSION).contains(entityType)) return MANSION;
-        if (getCoreEntities(END).contains(entityType)) return END;
+    public CoreType coreOf(EntityType entityType) {
+        for (CoreType coreType : CoreType.values()) {
+            if (getCoreEntities(coreType).contains(entityType)) return coreType;
+        }
         return null;
     }
 
-    boolean createNewSpawner(Block origin, String name) {
+    boolean createNewSpawner(Block origin, CoreType coreType) {
         final int dist = 16;
-        Set<EntityType> set = getCoreEntities(name);
+        Set<EntityType> set = getCoreEntities(coreType);
         if (set.isEmpty()) return false;
         Block block = origin.getRelative(plugin.rnd(dist),
                                          plugin.rnd(dist / 2),
@@ -216,7 +208,7 @@ public final class Windicator {
         CreatureSpawner spawner = (CreatureSpawner) block.getState();
         spawner.setSpawnedType(entityType);
         spawner.update(true, false);
-        plugin.getLogger().info(name + ": created " + entityType
+        plugin.getLogger().info(coreType + ": created " + entityType
                                 + " spawner at " + Blocks.toString(block)
                                 + " (" + nbor + ")");
         return true;
@@ -230,12 +222,12 @@ public final class Windicator {
         state.victory = victory;
     }
 
-    <T extends Mob> T spawn(String name, Class<T> clazz) {
+    <T extends Mob> T spawn(CoreType coreType, Class<T> clazz) {
         int x = 0;
         int y = 0;
         int z = 0;
         int s = 0;
-        for (Vec3 vec : getCores(name)) {
+        for (Vec3 vec : getCores(coreType)) {
             s += 1;
             x += vec.getX();
             y += vec.getY();
@@ -251,7 +243,7 @@ public final class Windicator {
         Block block = origin.getRelative(plugin.rnd(16),
                                          plugin.rnd(16),
                                          plugin.rnd(16));
-        switch (name) {
+        switch (coreType) {
         case WATER:
             if (!block.isLiquid()) return null;
             break;
@@ -269,7 +261,7 @@ public final class Windicator {
         result.setPersistent(false);
         result.setRemoveWhenFarAway(true);
         if (result == null) return null;
-        plugin.getLogger().info(name + ": spawned " + result.getType()
+        plugin.getLogger().info(coreType + ": spawned " + result.getType()
                                 + " at " + Blocks.toString(block));
         return result;
     }
@@ -291,39 +283,39 @@ public final class Windicator {
             }
             return;
         }
-        if (countCoreBlocks(WATER) > 0) {
+        if (countCoreBlocks(CoreType.WATER) > 0) {
             if (waterBoss == null || waterBoss.isDead()) {
                 waterBoss = null;
                 if (waterBossCooldown > 0) {
                     waterBossCooldown -= 1;
                 } else {
-                    waterBoss = spawn(WATER, ElderGuardian.class);
+                    waterBoss = spawn(CoreType.WATER, ElderGuardian.class);
                     if (waterBoss != null) {
                         waterBossCooldown = BOSS_COOLDOWN;
                     }
                 }
             }
         }
-        if (countCoreBlocks(MANSION) > 0) {
+        if (countCoreBlocks(CoreType.MANSION) > 0) {
             if (mansionBoss == null || mansionBoss.isDead()) {
                 mansionBoss = null;
                 if (mansionBossCooldown > 0) {
                     mansionBossCooldown -= 1;
                 } else {
-                    mansionBoss = spawn(MANSION, Illusioner.class);
+                    mansionBoss = spawn(CoreType.MANSION, Illusioner.class);
                     if (mansionBoss != null) {
                         mansionBossCooldown = BOSS_COOLDOWN;
                     }
                 }
             }
         }
-        if (countCoreBlocks(END) > 0) {
+        if (countCoreBlocks(CoreType.END) > 0) {
             if (endBoss == null || endBoss.isDead()) {
                 endBoss = null;
                 if (endBossCooldown > 0) {
                     endBossCooldown -= 1;
                 } else {
-                    endBoss = spawn(END, WitherSkeleton.class);
+                    endBoss = spawn(CoreType.END, WitherSkeleton.class);
                     if (endBoss != null) {
                         endBossCooldown = BOSS_COOLDOWN;
                     }
